--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,8 +2,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="Theme.MySherlock" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="actionBarItemBackground">@drawable/ab_button_selector</item>
-        <item name="android:actionBarItemBackground">@drawable/ab_button_selector</item>
+        <!--<item name="actionBarItemBackground">@drawable/ab_button_selector</item>-->
+        <!--<item name="android:actionBarItemBackground">@drawable/ab_button_selector</item>-->
         <item name="android:listViewStyle">@style/ListView</item>
         <item name="actionBarStyle">@style/ActionBarStyle</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -32,14 +32,12 @@
 
     <style name="ActionBar.Title" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textStyle">normal</item>
-        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/primary_text</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="ActionBar.SubTitle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
         <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textColor">@color/primary_text</item>
     </style>
 
