--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/main_background"
+    android:background="@color/list_background"
     android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
