--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,10 +3,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:orientation="vertical"
-    android:background="@color/main_background"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/list_background"
+    android:orientation="vertical"
     >
 
     <com.astuetz.PagerSlidingTabStrip
@@ -16,9 +16,10 @@
 
     <FrameLayout
         android:id="@+id/main_layout"
-        android:layout_weight="1"
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_width="fill_parent">
+        android:layout_weight="1"
+        >
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
@@ -28,6 +29,6 @@
     </FrameLayout>
 
 
-   <!-- <include layout="@layout/admob"/>-->
+    <!-- <include layout="@layout/admob"/>-->
 
 </LinearLayout>
