--- a/app/src/main/res/layout/simple_list_item_activated_1.xml
+++ b/app/src/main/res/layout/simple_list_item_activated_1.xml
@@ -6,11 +6,11 @@
 	android:id="@android:id/text1"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:background="@drawable/list_item_background"
 
 	android:gravity="center_vertical"
 	android:paddingLeft="12dip"
 	android:minHeight="54dp"
-	android:background="@drawable/list_selector"
 	android:ellipsize="marquee"
 	android:marqueeRepeatLimit="marquee_forever"
 	android:scrollHorizontally="true"
@@ -18,6 +18,4 @@
     android:textColor="@color/list_text"
     tools:text="Sample Text!"
 	 />
-	<!--android:textAppearance="?android:attr/textAppearanceMedium"-->
 
-<!-- android:singleLine="true" -->
