--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="selector">#8fff</color>
 	<color name="red">#ffdd3e35</color>
     <color name="green">#ff3cb840</color>
     <color name="blue">#ff15a9dc</color>
@@ -18,6 +17,8 @@
     <color name="ab_text">#ccc</color>
     <color name="actionbar">#333</color>
     <color name="tabs">#333</color>
+    <color name="black_text">#111</color>
     <color name="white">#fff</color>
     <color name="dark_divider">#2fff</color>
+    <color name="background_selected">#6fff</color>
 </resources>
