--- a/app/src/main/res/layout-w1280dp-land/main.xml
+++ b/app/src/main/res/layout-w1280dp-land/main.xml
@@ -16,12 +16,14 @@
         android:orientation="vertical"
         >
 
-        <com.astuetz.PagerSlidingTabStrip
-            android:id="@+id/navigation"
-            style="@style/TabStrip"
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             />
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
