--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,15 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/list_background"
     android:orientation="vertical"
     >
 
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/navigation"
-        style="@style/TabStrip"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         />
 
     <FrameLayout
@@ -21,14 +22,17 @@
         android:layout_weight="1"
         >
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            >
+
+
+        </androidx.viewpager.widget.ViewPager>
     </FrameLayout>
 
 
-    <!-- <include layout="@layout/admob"/>-->
+
 
 </LinearLayout>
