--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -1,91 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dialogRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
     android:minWidth="400dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/about_header"
-        android:padding="10dp">
+        >
 
         <TextView
-            android:id="@+id/TextView01"
+            android:id="@+id/aboutTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PHOTOSIGHT GALLERY "
-            android:textStyle="bold"
+            android:text="@string/about_title_"
+            android:textColor="@color/ab_text"
             android:textSize="16sp"
-            android:textColor="@color/ab_text"/>
+            android:textStyle="bold"
+            />
 
         <TextView
             android:id="@+id/versionText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:text="0.0.0"
+            tools:text="0.0.0"
             android:textColor="@color/white"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:textSize="16sp"/>
-    </LinearLayout>
+            />
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <ScrollView
             android:id="@+id/scrollView1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            >
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:orientation="vertical"
                 android:padding="5dp"
-                android:orientation="vertical">
+                >
 
                 <TextView
                     android:id="@+id/aboutText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:autoLink="all"
-                    android:background="@null"
                     android:padding="2dp"
-                    android:textColorLink="@color/dark_gray"
                     android:textColor="@color/black_text"
-                    android:textSize="14sp"/>
+                    android:textColorLink="@color/dark_gray"
+                    android:textSize="14sp"
+                    />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@null"
                     android:gravity="bottom"
                     android:padding="5dp"
-                    android:text="© 2015 Deviant Studio"
+                    android:text="@string/copyright"
                     android:textColor="@color/dark_gray"
-                    android:textSize="10sp"/>
+                    android:textSize="10sp"
+                    tools:ignore="SmallSp"
+                    />
             </LinearLayout>
         </ScrollView>
 
         <Button
             android:id="@+id/aboutOK"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="@android:string/ok"
-
-            android:layout_gravity="center_horizontal"/>
+            />
     </LinearLayout>
 
 </LinearLayout>
