--- a/app/src/main/res/layout/fragment_viewer.xml
+++ b/app/src/main/res/layout/fragment_viewer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ds.photosight_legacy.ui.widget.HackyDrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -7,9 +7,8 @@
     android:layout_height="match_parent">
 
     <!-- The main content view -->
-    <ds.photosight_legacy.ui.widget.GalleryViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/pager"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
@@ -21,28 +20,24 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:animateLayoutChanges="true"
-       >
-            <!--android:layerType="software"-->
-        <ListView
-            android:id="@+id/drawer_list"
+        >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/drawerList"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:choiceMode="singleChoice"
-            android:divider="@color/dark_divider"
-            android:dividerHeight="1dp"
-            android:listSelector="@android:color/transparent"
-
             tools:listitem="@layout/item_comment"/>
+            <!--android:divider="@color/dark_divider"-->
         <ProgressBar
             android:id="@+id/drawer_progress"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_gravity="center"/>
-            <!--android:layout_marginTop="48dp"-->
+        <!--android:layout_marginTop="48dp"-->
 
     </FrameLayout>
 
 
 
-</ds.photosight_legacy.ui.widget.HackyDrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 
