--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,11 @@
 <resources>
     <color name="primary">#1b1b1b</color>
     <color name="accent">#db5e4b</color>
-    <color name="background">#666</color>
+    <color name="background">@color/grey_dark</color>
+
+    <color name="grey_dark">#333</color>
+    <color name="grey">#666</color>
+    <color name="grey_light">#ccc</color>
 
     <color name="red">#ffdd3e35</color>
     <color name="green">#ff3cb840</color>
