--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="colorPrimary">@color/grey_light</item>
+        <item name="colorSurface">@color/primary</item>
+        <item name="colorSecondary">@color/accent</item>
+        <!--<item name="colorOnPrimary">?colorOnBackground</item>-->
+        <item name="android:statusBarColor">@color/primary</item>
+        <item name="android:windowBackground">@color/background</item>
+        <item name="elevationOverlayEnabled">false</item>
+        <!--    <item name="toolbarStyle">@style/ToolBarStyle</item>-->
+        <!--<item name="progressIndicatorStyle">@style/ProgressIndicatorStyle</item>-->
+    </style>
+
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+    </style>
+    <!--
+        <style name="ToolBarStyle" parent="Widget.AppCompat.Toolbar">
+            <item name="android:background">?colorPrimary</item>
+        </style>-->
+
+    <style name="BottomTabsShapeAppearance" parent="ShapeAppearance.MaterialComponents">
+        <item name="cornerFamily">rounded</item>
+        <!--<item name="cornerSizeBottomLeft">0dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>-->
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeTopRight">16dp</item>
+    </style>
+
+    <style name="IndeterminateLinearProgressIndicatorStyle" parent="Widget.MaterialComponents.ProgressIndicator.Linear.Indeterminate">
+        <item name="indicatorColor">?colorSecondary</item>
+    </style>
+
     <style name="ActionBarStyle" parent="Widget.AppCompat.Light.ActionBar.Solid">
         <item name="titleTextStyle">@style/ActionBar.Title</item>
         <item name="subtitleTextStyle">@style/ActionBar.SubTitle</item>
