--- a/app/src/main/res/layout/view_menu.xml
+++ b/app/src/main/res/layout/view_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,16 +19,14 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        style="@style/Widget.MaterialComponents.TabLayout.PrimarySurface"
+        style="@style/Widget.MaterialComponents.TabLayout.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center_horizontal"
         app:tabGravity="center"
         >
 
-        <com.google.android.material.tabs.TabItem
+        <!--<com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/categories"
@@ -38,27 +36,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ratings"
-            />
+            />-->
     </com.google.android.material.tabs.TabLayout>
-    <!--</com.google.android.material.card.MaterialCardView>-->
-    <!--</FrameLayout>-->
-
-    <!--         <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="asd"
-                     />-->
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/menuViewPager"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/grey_light"
         android:elevation="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
