--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<CheckedTextView
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/textLabel"
@@ -15,5 +15,7 @@
 	android:textSize="20sp"
     android:scrollHorizontally="true"
     tools:text="Sample Text!"
+	android:textColor="@color/menu_item_color"
+	android:background="@drawable/menu_selector"
     />
 
