--- a/app/src/main/res/layout/item_gallery_photo.xml
+++ b/app/src/main/res/layout/item_gallery_photo.xml
@@ -11,5 +11,6 @@
     android:focusable="true"
     android:foreground="?selectableItemBackground"
     tools:src="@mipmap/ic_launcher"
+    tools:ignore="ContentDescription"
     />
 
