--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="accent">#db5e4b</color>
     <color name="background">@color/grey_dark</color>
 
+    <color name="black">#000</color>
     <color name="grey_dark">#333</color>
     <color name="grey">#666</color>
     <color name="grey_light">#ccc</color>
