--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,11 @@
         <item name="android:windowBackground">@color/grey_light</item>
     </style>
 
+    <style name="AppTheme.Black" parent="AppTheme">
+        <item name="android:windowBackground">@color/black</item>
+    </style>
+
+
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash</item>
         <item name="android:windowTranslucentStatus">true</item>
