--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -24,6 +24,7 @@
         <com.google.android.material.progressindicator.ProgressIndicator
             android:id="@+id/progress"
             style="@style/IndeterminateLinearProgressIndicatorStyle"
+            android:indeterminateDuration="0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -38,7 +39,8 @@
             tools:listitem="@layout/item_gallery_photo"
             tools:itemCount="100"
             app:spanCount="2"
-            android:verticalScrollbarPosition="right"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
