--- a/app/src/main/res/layout/fragment_viewer.xml
+++ b/app/src/main/res/layout/fragment_viewer.xml
@@ -1,20 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:theme="@style/AppTheme.Black"
+    android:background="?android:windowBackground"
+    tools:background="@color/green"
+    android:theme="@style/AppTheme.Black"
     >
 
     <!-- The main content view -->
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        >
+
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
+            android:fitsSystemWindows="true"
+            app:elevation="0dp"
+            >
+            <!--android:background="@android:color/transparent"-->
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:title="Photosight Gallery"
+                />
+                <!--android:background="@color/drawer_background"-->
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     <!--drawer-->
     <FrameLayout
@@ -33,7 +63,7 @@
             />
         <!--android:divider="@color/dark_divider"-->
         <com.google.android.material.progressindicator.ProgressIndicator
-            android:id="@+id/drawer_progress"
+            android:id="@+id/drawerProgress"
             style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
