--- a/app/src/main/res/layout/item_viewer_photo.xml
+++ b/app/src/main/res/layout/item_viewer_photo.xml
@@ -5,15 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photoImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:adjustViewBounds="true"
         tools:ignore="ContentDescription"
         tools:src="@mipmap/ic_launcher"
         />
