--- a/app/src/main/res/layout/view_menu.xml
+++ b/app/src/main/res/layout/view_menu.xml
@@ -6,17 +6,16 @@
     android:id="@+id/bottomSheetLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:maxWidth="360dp"
     android:layout_gravity="center_horizontal"
     android:backgroundTint="@color/grey_light"
     android:elevation="20dp"
+    android:maxWidth="360dp"
     android:orientation="vertical"
-    app:behavior_peekHeight="46dp"
+    android:theme="@style/AppTheme.Light"
+    app:behavior_peekHeight="@dimen/peek_height"
     app:layout_behavior=".view.widget.HideableBottomSheet"
     app:shapeAppearance="@style/BottomTabsShapeAppearance"
     tools:showIn="@layout/fragment_gallery"
-    android:theme="@style/AppTheme.Light"
-
     >
 
     <com.google.android.material.tabs.TabLayout
@@ -28,17 +27,17 @@
         app:tabGravity="center"
         >
 
-       <!-- <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/categories"
-            />
+        <!-- <com.google.android.material.tabs.TabItem
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="@string/categories"
+             />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ratings"
-            />-->
+         <com.google.android.material.tabs.TabItem
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="@string/ratings"
+             />-->
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
