--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,6 @@
         <!--<item name="progressIndicatorStyle">@style/ProgressIndicatorStyle</item>-->
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <!--<item name="android:fitsSystemWindows">true</item>-->
         <!--        <item name="android:windowTranslucentStatus">true</item>
                 <item name="android:windowTranslucentNavigation">true</item>-->
     </style>
@@ -30,7 +29,7 @@
 
     <style name="AppTheme.Black" parent="AppTheme">
         <item name="android:windowBackground">@color/black</item>
-        <item name="colorSurface">@color/drawer_background</item>
+        <item name="colorSurface">@color/translucent</item>
 
     </style>
 
