--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -59,23 +59,15 @@
         android:id="@+id/rating"
         android:layout_marginTop="4dp"
         android:textColor="@color/text_secondary"
-        android:layout_below="@+id/status"
         android:layout_alignParentRight="true"/>
 
-    <!--todo remove-->
+   <!-- &lt;!&ndash;todo remove&ndash;&gt;
     <ImageView
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:id="@+id/status"
         android:alpha=".5"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"/>
-
-   <!-- <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layerType="software"
-        android:background="@drawable/dotted_line"
-        android:layout_alignParentBottom="true"/>-->
+        android:layout_alignParentRight="true"/>-->
 
 </RelativeLayout>
